force-app/main/default/objects/Complaint__c/Complaint__c.object-meta.xml
<CustomObject>
    <description>Used by customer service, similar to a case.</description>
    <label>Complaint</label>
    <nameField>
        <label>Complaint Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Complaints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>