force-app/main/default/objects/Complaint__c/fields/Assigned__c.field-meta.xml
<CustomField>
    <fullName>Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field for assigned user</description>
    <inlineHelpText>User Assigned to Resolve the Complaint</inlineHelpText>
    <label>Assigned</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>