force-app/main/default/objects/Complaint__c/fields/Complaint_Department__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Department__c</fullName>
    <description>Which part of our end to end process the complaint is for</description>
    <inlineHelpText>What department does this complaint pertain to?</inlineHelpText>
    <label>Complaint Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CSR - Allen</fullName>
                <default>true</default>
                <label>CSR - Teresa</label>
            </value>
            <value>
                <fullName>Fulfillment Digital - Brianna</fullName>
            </value>
            <value>
                <fullName>Fulfillment Print – Brianna</fullName>
            </value>
            <value>
                <fullName>Fulfillment Vendor – Brianna</fullName>
            </value>
            <value>
                <fullName>Digital Marketing Tools - Mindy</fullName>
            </value>
            <value>
                <fullName>Graphics</fullName>
                <label>Graphics - Mindy</label>
            </value>
            <value>
                <fullName>In-House Production - Mindy</fullName>
            </value>
            <value>
                <fullName>Outside Vendor - Mindy</fullName>
            </value>
            <value>
                <fullName>Print Marketing Tools - Mindy</fullName>
            </value>
            <value>
                <fullName>Marketing - Emily</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
                <label>Research - Debbie</label>
            </value>
            <value>
                <fullName>Finance - Shelly</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Technology – Greg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>