force-app/main/default/objects/Complaint__c/fields/Complaint_Description__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Description__c</fullName>
    <description>Complaint Description</description>
    <inlineHelpText>Description of Customer&apos;s Complaint</inlineHelpText>
    <label>Complaint Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>