force-app/main/default/objects/Complaint__c/fields/Complaint_Number__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Number__c</fullName>
    <description>Complaint Number</description>
    <inlineHelpText>Given to the customer as a reference number</inlineHelpText>
    <label>Complaint Number</label>
    <type>AutoNumber</type>
</CustomField>