force-app/main/default/objects/Complaint__c/fields/Complaint_Order__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used if the customer service rep makes a complaint order</description>
    <inlineHelpText>List complaint order generated for this complaint</inlineHelpText>
    <label>Complaint Order</label>
    <referenceTo>kugo2p__SalesOrder__c</referenceTo>
    <relationshipLabel>Complaints</relationshipLabel>
    <relationshipName>Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>