force-app/main/default/objects/Complaint__c/fields/Complaint_Status__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Status__c</fullName>
    <label>Complaint Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New Complaint</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Refund requested (Mark Douglass)</fullName>
            </value>
            <value>
                <fullName>No response from customer(closed)</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
                <label>Resolved(Closed)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>