force-app/main/default/objects/Complaint__c/fields/Complaint_Type__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Type__c</fullName>
    <inlineHelpText>What type of complaint is it?</inlineHelpText>
    <label>Complaint Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Product quality</fullName>
            </value>
            <value>
                <fullName>Poor communication</fullName>
            </value>
            <value>
                <fullName>Product Feedback</fullName>
            </value>
            <value>
                <fullName>Product Delivery</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>Unmet expectations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>