force-app/main/default/objects/Complaint__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Complaint&apos;s contact</description>
    <inlineHelpText>Complaint&apos;s contact</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Complaints</relationshipLabel>
    <relationshipName>Complaints</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>