force-app/main/default/objects/Complaint__c/fields/Date_Opened__c.field-meta.xml
<CustomField>
    <fullName>Date_Opened__c</fullName>
    <description>Date complaint was opened</description>
    <inlineHelpText>Date complaint was opened</inlineHelpText>
    <label>Date Opened</label>
    <type>Date</type>
</CustomField>