force-app/main/default/objects/Complaint__c/fields/Estimated_Compensation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Compensation_Amount__c</fullName>
    <description>Estimated amount of $ spent on compensation for incorrect product</description>
    <inlineHelpText>Estimated Amount to Compensate Client</inlineHelpText>
    <label>Estimated Compensation Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>