force-app/main/default/objects/Complaint__c/fields/Fulfillment_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Contact_ID__c</fullName>
    <description>Original Fulfillment Customer ID</description>
    <formula>Original_Fulfillment__r.Customer_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Original Fulfillment Customer ID</inlineHelpText>
    <label>Fulfillment Contact ID</label>
    <type>Text</type>
</CustomField>