force-app/main/default/objects/Complaint__c/fields/Fulfillment_Market_Project__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Market_Project__c</fullName>
    <formula>Original_Fulfillment__r.Market_Project__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fulfillment Market Project</label>
    <type>Text</type>
</CustomField>