force-app/main/default/objects/Complaint__c/fields/Fulfillment_Primary_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Primary_Recipient__c</fullName>
    <description>Primary Recipient on Original Fulfillment</description>
    <formula>Original_Fulfillment__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Primary Recipient on Original Fulfillment</inlineHelpText>
    <label>Fulfillment Primary Recipient</label>
    <type>Text</type>
</CustomField>