force-app/main/default/objects/Complaint__c/fields/IDS_Complete__c.field-meta.xml
<CustomField>
    <fullName>IDS_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did we review and make any necessary process changes to avoid future complaints?</description>
    <inlineHelpText>Did we review and make any necessary process changes to avoid future complaints?</inlineHelpText>
    <label>IDS Complete</label>
    <type>Checkbox</type>
</CustomField>