force-app/main/default/objects/Complaint__c/fields/IDS_Notes__c.field-meta.xml
<CustomField>
    <fullName>IDS_Notes__c</fullName>
    <description>Internal review notes - what went wrong and is it cause for concern/change?</description>
    <inlineHelpText>Internal review notes - what went wrong and is it cause for concern/change?</inlineHelpText>
    <label>IDS Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>