force-app/main/default/objects/Complaint__c/fields/IDS_Owner__c.field-meta.xml
<CustomField>
    <fullName>IDS_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Internal user who should review the complaint for internal process issues</description>
    <inlineHelpText>Internal user who should review the complaint for internal process issues</inlineHelpText>
    <label>IDS Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Complaints1</relationshipName>
    <type>Lookup</type>
</CustomField>