force-app/main/default/objects/Complaint__c/fields/Is_Internal__c.field-meta.xml
<CustomField>
    <fullName>Is_Internal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked by a workflow when status is set to an internal status</description>
    <label>Is Internal</label>
    <type>Checkbox</type>
</CustomField>