force-app/main/default/objects/Complaint__c/fields/Markets__c.field-meta.xml
<CustomField>
    <fullName>Markets__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market Project</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Complaints</relationshipLabel>
    <relationshipName>Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>