force-app/main/default/objects/Complaint__c/fields/Original_Fulfillment__c.field-meta.xml
<CustomField>
    <fullName>Original_Fulfillment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Looks up fulfillment</description>
    <inlineHelpText>Fulfillment that complaint is pertaining to</inlineHelpText>
    <label>Original Fulfillment</label>
    <referenceTo>Fulfillment__c</referenceTo>
    <relationshipLabel>Complaints</relationshipLabel>
    <relationshipName>Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>