force-app/main/default/objects/Complaint__c/fields/Original_Fulfillment_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Fulfillment_Created_Date__c</fullName>
    <description>Original Fulfillment Date Created</description>
    <formula>Original_Fulfillment__r.Created_Date_Lite__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Fulfillment Created Date</label>
    <type>Date</type>
</CustomField>