force-app/main/default/objects/Complaint__c/fields/Original_Fulfillment_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Original_Fulfillment_Product_Name__c</fullName>
    <description>Product Name of Complaint</description>
    <formula>Original_Fulfillment__r.Product_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Fulfillment Product Name</label>
    <type>Text</type>
</CustomField>