force-app/main/default/objects/Complaint__c/fields/Original_Fulfillment_Status__c.field-meta.xml
<CustomField>
    <fullName>Original_Fulfillment_Status__c</fullName>
    <description>Status of original fulfillment</description>
    <formula>TEXT(Original_Fulfillment__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Status of original fulfillment</inlineHelpText>
    <label>Original Fulfillment Status</label>
    <type>Text</type>
</CustomField>