force-app/main/default/objects/Complaint__c/fields/Original_Order__c.field-meta.xml
<CustomField>
    <fullName>Original_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Original order if applicable</description>
    <inlineHelpText>What order number (Kugamon-Only) is this complaint related to?</inlineHelpText>
    <label>Original Order</label>
    <referenceTo>kugo2p__SalesOrder__c</referenceTo>
    <relationshipLabel>Complaints (Original Order)</relationshipLabel>
    <relationshipName>Complaints1</relationshipName>
    <type>Lookup</type>
</CustomField>