force-app/main/default/objects/Complaint__c/fields/Resolution_Description__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Description__c</fullName>
    <description>Where to write out what was done to help the customer</description>
    <inlineHelpText>What was done to resolve the complaint?</inlineHelpText>
    <label>Resolution Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>