force-app/main/default/objects/Complaint__c/fields/Resolved_Date__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Date__c</fullName>
    <description>Date complaint was resolved</description>
    <inlineHelpText>Date Complaint was Resolved</inlineHelpText>
    <label>Resolved Date</label>
    <type>Date</type>
</CustomField>