force-app/main/default/objects/Complaint__c/fields/Resolved_Owner__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Owner__c</fullName>
    <label>Resolved Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>