force-app/main/default/objects/Complaint__c/validationRules/Complaint_Department_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Complaint_Department_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Complaint_Department__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Complaint_Department__c</errorDisplayField>
    <errorMessage>Please select the &quot;Complaint Department&quot; and then click save.</errorMessage>
</ValidationRule>