force-app/main/default/objects/Complaint__c/validationRules/Owner_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Owner_Changed</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( OwnerId )</errorConditionFormula>
    <errorMessage>Owner cannot be changed</errorMessage>
</ValidationRule>