force-app/main/default/objects/Complaint__c/validationRules/Resolution_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>Resolution_Description</fullName>
    <active>true</active>
    <description>Resolution Description</description>
    <errorConditionFormula>AND
(
ISPICKVAL(Complaint_Status__c,&quot;Resolved&quot;),
ISBLANK( Resolution_Description__c )
)</errorConditionFormula>
    <errorDisplayField>Resolution_Description__c</errorDisplayField>
    <errorMessage>There must be a text in the field</errorMessage>
</ValidationRule>