force-app/main/default/objects/Complaint__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Markets__c</columns>
    <columns>Assigned__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Complaint_Department__c</columns>
    <columns>Complaint_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Days_Open__c</columns>
    <columns>Original_Fulfillment__c</columns>
    <columns>Original_Fulfillment_Product_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Complaint_Type__c</field>
        <operation>notEqual</operation>
        <value>Cancellation</value>
    </filters>
    <label>All</label>
</ListView>