force-app/main/default/objects/Complaint__c/listViews/ALL_Cancellations.listView-meta.xml
<ListView>
    <fullName>ALL_Cancellations</fullName>
    <columns>NAME</columns>
    <columns>Complaint_Status__c</columns>
    <columns>Contact__c</columns>
    <columns>Assigned__c</columns>
    <columns>Complaint_Department__c</columns>
    <columns>Days_Open__c</columns>
    <columns>Markets__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Complaint_Status__c</field>
        <operation>contains</operation>
        <value>New,In Progress,Refund,No Response,Resolved</value>
    </filters>
    <filters>
        <field>Complaint_Type__c</field>
        <operation>equals</operation>
        <value>Cancellation</value>
    </filters>
    <label>ALL Cancellations</label>
    <sharedTo>
        <group>Allen_Wardell</group>
        <group>Dylan_Campbell</group>
        <group>Mark_Douglass</group>
        <group>Michelle_Schneider</group>
        <group>Shelly_Martin</group>
        <group>Teresa_Hemingson</group>
    </sharedTo>
</ListView>