force-app/main/default/objects/Complaint__c/listViews/Complaints.listView-meta.xml
<ListView>
    <fullName>Complaints</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Markets__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Complaint_Department__c</columns>
    <columns>Complaint_Status__c</columns>
    <columns>Assigned__c</columns>
    <columns>Days_Open__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Complaint_Status__c</field>
        <operation>equals</operation>
        <value>In Progress,New</value>
    </filters>
    <filters>
        <field>Complaint_Type__c</field>
        <operation>notContain</operation>
        <value>Cancellation</value>
    </filters>
    <label>Open Complaints</label>
</ListView>