force-app/main/default/objects/Complaint__c/listViews/Complaints_Brianna.listView-meta.xml
<ListView>
    <fullName>Complaints_Brianna</fullName>
    <booleanFilter>(1 OR 2) AND 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Complaint_Description__c</columns>
    <columns>Original_Fulfillment_Product_Name__c</columns>
    <columns>Fulfillment_Primary_Recipient__c</columns>
    <columns>Complaint_Status__c</columns>
    <columns>Complaint_Department__c</columns>
    <columns>Assigned__c</columns>
    <columns>Internal_notes__c</columns>
    <columns>Original_Fulfillment__c</columns>
    <columns>Markets__c</columns>
    <columns>Original_Order__c</columns>
    <columns>Resolution_Description__c</columns>
    <columns>Complaint_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned__c</field>
        <operation>contains</operation>
        <value>Brianna</value>
    </filters>
    <filters>
        <field>Complaint_Department__c</field>
        <operation>contains</operation>
        <value>Fulfillment Digital - Brianna,Fulfillment Print – Brianna,Fulfillment Vendor –</value>
    </filters>
    <filters>
        <field>Complaint_Status__c</field>
        <operation>notEqual</operation>
        <value>No response from customer(closed),Resolved</value>
    </filters>
    <label>Open Complaints - Brianna</label>
    <sharedTo>
        <group>Ad_Prod</group>
    </sharedTo>
</ListView>