force-app/main/default/objects/Complaint__c/listViews/Open.listView-meta.xml
<ListView>
    <fullName>Open</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Markets__c</columns>
    <columns>Assigned__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Complaint_Department__c</columns>
    <columns>Complaint_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Days_Open__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Complaint_Status__c</field>
        <operation>contains</operation>
        <value>New Complaint,In Progress</value>
    </filters>
    <label>Open</label>
</ListView>